Fix alignment of displayed number
The displayed number was in the top left corner of the display.

Calculators usually display numbers on the right of the display.

--- a/style.css
+++ b/style.css
@@ -31,8 +31,12 @@ html {
 
 #display {
     border: 1px solid black;
-    height: 120px;
+    height: 60px;
     width: 416px;
+    font-size: 32px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: right;
+    padding: 13px;
 }
 
 .number, .operator, #decimal {
@@ -57,5 +61,5 @@ html {
 }
 
 button {
-    font-size: 18px;
+    font-size: 24px;
 }
